@@ -1,6 +1,3 @@
-msg.bg.0117.text.n   0.499658
-msg.bg.0117.text.y   0.499997
-msg.dr.0118.base64.n 0.009708
-msg.dr.0118.base64.y 0.488277
-msg.gs.0119.text.n   0.857128
-msg.gs.0119.text.y   0.741956
+msg.bg.0117.text     0.499997
+msg.dr.0118.base64   0.488277
+msg.gs.0119.text     0.741956
